# Compress-to-fit

./: .clang-tidy  .gitignore  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.docs  README.md  vcpkg-configuration.json  vcpkg.json
Compress-to-fit/: CMakeLists.txt  Compress-to-fit.cpp  Compress-to-fit.h
Compress-to-fit/for_intellisense/: everything.hpp
Compress-to-fit/modules/std/: CMakeLists.txt  std.ixx
Compress-to-fit/src/: data_streamer.cppm
Compress-to-fit/src/models/: models.cppm  utils.cppm
Compress-to-fit/src/models/LZ77/: lz77.cppm  lz77_impl.cpp  lz77_impl.cppm
Compress-to-fit/src/parser/: cli_parser.cpp  cli_parser.cppm
Compress-to-fit/src/util/: cli_parser.cpp  cli_parser.cppm  cli_parser.hpp  concurrent_file_buffer.cppm  core_utils.cppm  file_buffer.cppm  file_management.cpp  file_management.cppm  file_management.hpp  file_management_impl.cpp  file_queue.cppm  macros.hpp  utils.cpp  utils.cppm  utils.hpp
Compress-to-fit/src/util/containers/: containers.cppm  file_buffer.cppm  file_list.cppm  file_management.cppm  file_queue.cppm  thread_pool.cppm
Compress-to-fit/test/benchmarks/: file_management.cpp
Compress-to-fit/test/util/: utils.cpp
Design/Compress_to_fit/: CMakeLists.txt  Compress_to_fit.qmlproject  Compress_to_fit.qmlproject.qtds  qds.cmake
Design/Compress_to_fit/App/autogen/: environment.h
Design/Compress_to_fit/Compress_to_fit/: CMakeLists.txt  Constants.qml  qmldir
Design/Compress_to_fit/Compress_to_fit/designer/: plugin.metainfo
Design/Compress_to_fit/Compress_to_fitContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
Testing/: a.txt
documentation/html/: Compress-to-fit_8cpp.html  Compress-to-fit_8cpp.js  Compress-to-fit_8cpp__incl.map  Compress-to-fit_8cpp__incl.md5  Compress-to-fit_8cpp_source.html  _compress-to-fit_8cpp.html  _compress-to-fit_8cpp.js  _compress-to-fit_8cpp__incl.map  _compress-to-fit_8cpp__incl.md5  _compress-to-fit_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  _compress-to-fit_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  _compress-to-fit_8cpp_source.html  annotated.html  annotated_dup.js  classConcFileBuffer-members.html  classConcFileBuffer.html  classConcFileBuffer.js  classConcFileBuffer__coll__graph.map  classConcFileBuffer__coll__graph.md5  classConcFileBuffer_a6b09de82a3f1c17a3e7c43101d77ebb7_cgraph.map  classConcFileBuffer_ae4d51c917420b37eb906e2c60bc8b8e5_cgraph.md5  classConcFileBuffer_aee05dae159f1fd6d6109ae7f20a839bf_icgraph.map  classConcFileBuffer_aee05dae159f1fd6d6109ae7f20a839bf_icgraph.md5  classConcOrderedFileList-members.html  classConcOrderedFileList.html  classConcOrderedFileList.js  classConcOrderedFileList__coll__graph.map  classConcOrderedFileList__coll__graph.md5  classFile-members.html  classFile.html  classFile.js  classFile__coll__graph.map  classFile__coll__graph.md5  classFile_a58521685afcf0aa7659e34d003f46868_cgraph.map  classFile_a58521685afcf0aa7659e34d003f46868_icgraph.map  classFile_a58521685afcf0aa7659e34d003f46868_icgraph.md5  classLZ77Block-members.html  classLZ77Block.html  classLZ77Block.js  classLZ77Block__coll__graph.map  (+603 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  concepts_1.js  concepts_2.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  (+78 more)
documentation/latex/: Compress-to-fit_8cpp.tex  Compress-to-fit_8cpp__incl.md5  Compress-to-fit_8cpp_source.tex  _compress-to-fit_8cpp.tex  _compress-to-fit_8cpp__incl.md5  _compress-to-fit_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  _compress-to-fit_8cpp_source.tex  annotated.tex  classConcFileBuffer.tex  classConcFileBuffer__coll__graph.md5  classConcFileBuffer_a6b09de82a3f1c17a3e7c43101d77ebb7_cgraph.md5  classConcFileBuffer_aee05dae159f1fd6d6109ae7f20a839bf_icgraph.md5  classConcOrderedFileList.tex  classConcOrderedFileList__coll__graph.md5  classFile.tex  classFile__coll__graph.md5  classLZ77Block.tex  classLZ77Block__coll__graph.md5  classLZ77Compressor.tex  classLZ77Compressor__coll__graph.md5  classLZ77Compressor_aef2378107a1b0091894607b09084cbb8_cgraph.md5  classLZ77Compressor_aef2378107a1b0091894607b09084cbb8_icgraph.md5  classLZ77ConcurrentCompressor.tex  classLZ77ConcurrentCompressor__coll__graph.md5  classLZ77ConcurrentCompressor_a1f68f32f3d3d9c7fb2ed7c0b4d1d7cb3_icgraph.md5  classLZ77ConcurrentCompressor_a3e5c38f00925044e3a3e0d9296840842_cgraph.md5  classLZ77ConcurrentCompressor_a3e5c38f00925044e3a3e0d9296840842_icgraph.md5  classLZ77ConcurrentCompressor_a9f7d12782f0c5a6b78011677b03089a7_cgraph.md5  classLZ77ConcurrentDecompressor.tex  classLZ77ConcurrentDecompressor__coll__graph.md5  classLZ77ConcurrentDecompressor_a3cf081cce8f45bc2680ec231abd3aee8_cgraph.md5  classLZ77ConcurrentDecompressor_a3cf081cce8f45bc2680ec231abd3aee8_icgraph.md5  classLZ77Decompressor.tex  classLZ77Decompressor__coll__graph.md5  classLZ77Decompressor_a7a2f3317179ef2e071ca0c1d44d1555c_cgraph.md5  classLZ77Decompressor_a7a2f3317179ef2e071ca0c1d44d1555c_icgraph.md5  classThreadPool.tex  classThreadPool__coll__graph.md5  classWindow.tex  classWindow__coll__graph.md5  (+208 more)
